--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,9 @@
 --------------------
+Zmiany w PWEdane 0.0.4 (2015-03-31)
+
+- Pobieranie wyników niewypunktowanych wymusza niestosowanie skali.
+
+--------------------
 Zmiany w PWEdane 0.0.3 (2015-03-23)
 
 - Dodanie do funkcji pobierz_dane_kontekstowe() zmiennej "populacja" 
